speed up algo, use hashmaps